<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/files"
            android:checked="true"
            android:title="@string/all_files" />
    </group>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:enabled="true"
            android:title="@string/settings"
            android:visible="true" />
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:visible="true" />
        <item
            android:id="@+id/help"
            android:title="@string/help" />
    </group>
</menu>